--- a/demo-grpc/pom.xml
+++ b/demo-grpc/pom.xml
@@ -4,8 +4,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-
+    <groupId>com.code</groupId>
+    <version>0.1.1-SNAPSHOT</version>
     <artifactId>demo-grpc</artifactId>
+
+    <packaging>pom</packaging>
+    <modules>
+        <module>demo-grpc-server</module>
+        <module>demo-grpc-client</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
