--- a/demo-grpc/pom.xml
+++ b/demo-grpc/pom.xml
@@ -49,6 +49,11 @@
                 <version>1.45.1</version>
             </dependency>
 
+            <dependency>
+                <groupId>com.google.protobuf</groupId>
+                <artifactId>protobuf-java-util</artifactId>
+                <version>4.0.0-rc-2</version>
+            </dependency>
 
             <dependency>
                 <groupId>javax.annotation</groupId>
